--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
       <section class="secaoSobre clearfix">
         <div class="container">
-          <img src="img/sobre-apeperia.png" class="secaoSobre-imgDestaque">
+          <img src="img/sobre-apeperia.png" alt class="secaoSobre-imgDestaque">
           <h2 class="secaoSobre-titulo tituloPadrao">
             SOBRE
           </h2>
